recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:16: error: reassignment to val
	if (levels=0) {
                  ^SquareKoch:17: error: not found: value lenght
		avance(lenght)
                       ^